# aomi-sdk

./: .gitignore  AGENTS.md  Cargo.toml  README.md  rust_out
.github/workflows/: ci.yml  release-plugins.yml
apps/across/: Cargo.toml
apps/across/src/: client.rs  lib.rs  tool.rs  types.rs
apps/binance/: Cargo.toml
apps/binance/src/: client.rs  lib.rs  tool.rs  types.rs
apps/bybit/: Cargo.toml
apps/bybit/src/: client.rs  lib.rs  tool.rs  types.rs
apps/cow/: Cargo.toml
apps/cow/src/: client.rs  lib.rs  tool.rs  types.rs
apps/cow/tests/: live_flow.rs
apps/defi/: Cargo.toml
apps/defi/src/: client.rs  lib.rs  tool.rs  types.rs
apps/defillama/: Cargo.toml
apps/defillama/src/: client.rs  lib.rs  tool.rs  types.rs
apps/delta/: Cargo.toml
apps/delta/src/: client.rs  lib.rs  tool.rs  types.rs
apps/dune/: Cargo.toml
apps/dune/src/: client.rs  lib.rs  tool.rs
apps/dydx/: Cargo.toml
apps/dydx/src/: client.rs  lib.rs  tool.rs
apps/gmx/: Cargo.toml
apps/gmx/src/: client.rs  lib.rs  tool.rs  types.rs
apps/hyperliquid/: Cargo.toml
apps/hyperliquid/src/: client.rs  lib.rs  tool.rs
apps/kaito/: Cargo.toml
apps/kaito/src/: client.rs  lib.rs  tool.rs
apps/kalshi/: Cargo.toml
apps/kalshi/src/: client.rs  lib.rs  tool.rs  types.rs
apps/khalani/: Cargo.toml
apps/khalani/src/: client.rs  lib.rs  tool.rs  types.rs
apps/lifi/: Cargo.toml
apps/lifi/src/: client.rs  lib.rs  tool.rs  types.rs
apps/manifold/: Cargo.toml
apps/manifold/src/: client.rs  lib.rs  tool.rs  types.rs
apps/molinar/: Cargo.toml
apps/molinar/src/: client.rs  lib.rs  tool.rs  types.rs
apps/molinar/tests/: molinar_e2e.rs
apps/morpho/: Cargo.toml
apps/morpho/src/: client.rs  lib.rs  tool.rs
apps/neynar/: Cargo.toml
apps/neynar/src/: client.rs  lib.rs  tool.rs  types.rs
apps/okx/: Cargo.toml
apps/okx/src/: client.rs  lib.rs  tool.rs  types.rs
apps/oneinch/: Cargo.toml
apps/oneinch/src/: client.rs  lib.rs  tool.rs  types.rs
apps/para/: Cargo.toml
apps/para-consumer/: Cargo.toml
apps/para-consumer/src/: client.rs  lib.rs  tool.rs  types.rs
apps/para/src/: client.rs  lib.rs  tool.rs  types.rs
apps/pelagos/: Cargo.toml
apps/pelagos/src/: client.rs  lib.rs  tool.rs  types.rs
apps/polymarket/: Cargo.toml
apps/polymarket-rewards/: Cargo.toml
apps/polymarket-rewards/src/: client.rs  lib.rs  tool.rs  types.rs
apps/polymarket/src/: client.rs  lib.rs  testing.rs  tool.rs  types.rs
apps/polymarket/src/client/: execution.rs  http.rs  intent.rs  market.rs  models.rs  tests.rs  validation.rs
apps/polymarket/tests/: live_trade.rs
apps/prediction/: Cargo.toml
apps/prediction/src/: client.rs  lib.rs  tool.rs  types.rs
apps/social/: Cargo.toml
apps/social/src/: client.rs  lib.rs  tool.rs  types.rs
apps/test-dyn/: Cargo.toml
apps/test-dyn/src/: lib.rs
apps/x/: Cargo.toml
apps/x/src/: client.rs  lib.rs  tool.rs  types.rs
apps/yearn/: Cargo.toml
apps/yearn/src/: client.rs  lib.rs  tool.rs
apps/zerox/: Cargo.toml
apps/zerox/src/: client.rs  lib.rs  tool.rs  types.rs
crates/dyn-sdk/: Cargo.toml
crates/dyn-sdk/src/: ffi.rs  lib.rs  macros.rs  types.rs
docs/: abi-versioning.md  host-interop.md  repo-structure.md  sdk-version-compatibility.md
examples/dyn-hello/: Cargo.toml
examples/dyn-hello/src/: lib.rs
examples/dyn-khalani/: Cargo.toml  README.md
examples/dyn-khalani/src/: lib.rs
scripts/: check_sdk_version_bump.py
sdk/: Cargo.toml
sdk/examples/app-template-http/: Cargo.toml
sdk/examples/app-template-http/src/: client.rs  lib.rs  tool.rs
sdk/examples/hello-app/: Cargo.toml
sdk/examples/hello-app/src/: lib.rs
sdk/src/: abi.rs  builder.rs  ffi.rs  handle.rs  lib.rs  route.rs  testing.rs  types.rs
sdk/tests/: compile_shapes.rs  ffi_concurrency.rs  ffi_contract.rs  ffi_lifecycle.rs  ffi_robustness.rs
sdk/tests/common/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs  validate.rs
