[package]
name = "dyn-molinar"
version = "0.1.0"
edition = "2024"
description = "Molinar 3D world bot agent — Aomi dynamic plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aomi-sdk = { workspace = true }
reqwest = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[[test]]
name = "molinar_e2e"
path = "tests/molinar_e2e.rs"
