[package]
name = "dyn-molinar"
version = "0.1.0"
edition = "2024"
description = "Molinar 3D world bot agent — Aomi dynamic plugin"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aomi-sdk = { path = "../../sdk" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
schemars = "1.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[test]]
name = "molinar_e2e"
path = "tests/molinar_e2e.rs"
